--- a/app2/src/app/app.component.html
+++ b/app2/src/app/app.component.html
@@ -13,6 +13,7 @@
     </div>
   </div>
   <div class="content">
-    <h1>Fetching menu from back</h1>
+    <h1 *ngIf="fetching">2. Fetching menu from back</h1>
+    <h1 *ngIf="!fetching">3. All is loaded</h1>
   </div>
 </div>
