--- a/app1/src/assets/grid.css
+++ b/app1/src/assets/grid.css
@@ -78,3 +78,15 @@ html, body {
     background-position: -32px; }
   40%, 100% {
     background-position: 208px; } }
+
+
+        a {
+          text-decoration: none;
+          display: block;
+          margin: 15px auto;
+          border: 2px solid #96ceb4;
+          border-radius: 10px;
+          width: 80%;
+          color: black;
+          padding: 10px 0;
+        }
