--- a/app2/src/app/app.component.html
+++ b/app2/src/app/app.component.html
@@ -3,14 +3,7 @@
     <h1>App 2</h1>
   </div>
   <div class="menu">
-    <div *ngFor="let link of menu">
-      <a [attr.href]="link.link" *ngIf="!link.loading">{{ link.label }}</a>
-      <div class="post" *ngIf="link.loading">
-        <div class="avatar"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </div>
-    </div>
+    <layout-menu [links]="menu"></layout-menu>
   </div>
   <div class="content">
     <h1 *ngIf="fetching">2. Fetching menu from back</h1>
